TC_22.005.01 | Multibranch Pipeline Management > View Multibranch Pipeline Events | Display all events per branch